# evaluations

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tasks/: gsm8k.py  hellaswag.py  hello_world.py  math.py  security_guide.py  theory_of_mind.py  tool_use.py
utils/: arg_parser.py
